--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^6.1.1"
   },
-  "homepage": "http://./",
+  "homepage": "./public/index.html",
   "description": "В проектной работе мы предлагаем вам написать визуализатор алгоритмов, которые вы будете изучать в течение месяца. Эта проектная работа заточена на анимацию и поэтапное отображение работы алгоритма, что позволит вам детальнее понять каждый шаг его работы.",
   "main": "index.js",
   "author": "",
