--- a/package.json
+++ b/package.json
@@ -47,7 +47,12 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
-    "gh-pages": "^6.1.1"
+    "@types/react-test-renderer": "^18.0.7",
+    "fetch-mock": "^9.11.0",
+    "gh-pages": "^6.1.1",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^17.0.2",
+    "redux-mock-store": "^1.5.4"
   },
   "homepage": "./"
 }
