--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +49,8 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^18.0.7",
+    "cypress": "^13.7.1",
+    "eslint-plugin-cypress": "^2.15.1",
     "fetch-mock": "^9.11.0",
     "gh-pages": "^6.1.1",
     "jest": "^27.5.1",
